syntax = "proto3";

service Sum {
	rpc CalSum(SumRequest) returns (SumResponse) {}
}

message SumRequest {
	int32 x = 1;
	int32 y = 2;
}

message SumResponse {
	int32 sum = 1;
}
